--- a/.env
+++ b/.env
@@ -4,3 +4,6 @@ TZ=Europe/Bucharest
 TV_FOLDER=/storage/tv
 MOVIES_FOLDER=/storage/movies
 DOWNLOADS_FOLDER=/storage/downloads
+PIA_REGION=
+PIA_USER=
+PIA_PASSWORD=
